fix: sectionTitle not align center on long titles

--- a/src/pages/sitehome/components/sectionTitle/sectionTitle.scss
+++ b/src/pages/sitehome/components/sectionTitle/sectionTitle.scss
@@ -19,6 +19,7 @@
         color: #000;
         font-size: 36px;
         margin: 0 0 15px;
+        text-align: center;
     }
     .section-title-desc{
         color: #777777;
